--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 </head>
 
 <body>
-<h1>cześć</h1>
-<p>to jest mój nowy pomysł</p>
-<li></li>
+    <nav></nav>
+    <header></header>
+    <main></main>
+    <footer></footer>
+
 </body>
 
 </html>
