--- a/index.html
+++ b/index.html
@@ -10,7 +10,23 @@
 </head>
 
 <body>
-    <nav></nav>
+    <nav class="nav__project">
+            <div class="background__image">
+
+
+                <div class="burger__button">
+                    <button class="burger__button__spin" > </button>
+                </div>
+
+                <div class="navigation_no_phone">
+
+                    <a class='navigation_no_phone__nav__link' href="">Home <i class="fa-solid fa-house"></i></a>
+                    <a class='navigation_no_phone__nav__link' href="">O nas <i class="fa-solid fa-person"></i></a>
+                    <a class="navigation_no_phone__nav__link" href=""> Kontakt <i class="fa-solid fa-phone"></i></a>
+                    <a class="navigation_no_phone__nav__link" href="">Cennik <i class="fa-solid fa-money-bill"></i></a>
+                </div>
+            </div>
+    </nav>
     <header></header>
     <main></main>
     <footer></footer>
