--- a/index.html
+++ b/index.html
@@ -11,23 +11,38 @@
 
 <body>
     <nav class="nav__project">
-            <div class="background__image">
+        <div class="background__image">
 
 
-                <div class="burger__button">
-                    <button class="burger__button__spin" > </button>
-                </div>
-
-                <div class="navigation_no_phone">
-
-                    <a class='navigation_no_phone__nav__link' href="">Home <i class="fa-solid fa-house"></i></a>
-                    <a class='navigation_no_phone__nav__link' href="">O nas <i class="fa-solid fa-person"></i></a>
-                    <a class="navigation_no_phone__nav__link" href=""> Kontakt <i class="fa-solid fa-phone"></i></a>
-                    <a class="navigation_no_phone__nav__link" href="">Cennik <i class="fa-solid fa-money-bill"></i></a>
-                </div>
+            <div class="burger__button">
+                <button class="burger__button__spin"> </button>
             </div>
+
+            <div class="navigation_on_phone">
+                <a class='navigation_on_phone__nav__link' href="">Home <i class="fa-solid fa-house"></i></a>
+                <a class='navigation_on_phone__nav__link' href="">O nas <i class="fa-solid fa-person"></i></a>
+                <a class="navigation_on_phone__nav__link" href=""> Kontakt <i class="fa-solid fa-phone"></i></a>
+                <a class="navigation_on_phone__nav__link" href="">Cennik <i class="fa-solid fa-money-bill"></i></a>
+            </div>
+
+            <div class="navigation_no_phone">
+
+                <a class='navigation_no_phone__nav__link' href="">Home <i class="fa-solid fa-house"></i></a>
+                <a class='navigation_no_phone__nav__link' href="">O nas <i class="fa-solid fa-person"></i></a>
+                <a class="navigation_no_phone__nav__link" href=""> Kontakt <i class="fa-solid fa-phone"></i></a>
+                <a class="navigation_no_phone__nav__link" href="">Cennik <i class="fa-solid fa-money-bill"></i></a>
+            </div>
+        </div>
     </nav>
-    <header></header>
+    <header>
+        <div class="backgroundHero">
+            <div class="backgroundHero__shadow"></div>
+            <div class="search-bar">
+                <input type="text" class="search-input" placeholder="Szukaj...">
+                <button class="search-button">Szukaj</button>
+              </div>
+        </div>
+    </header>
     <main></main>
     <footer></footer>
 
